# ccplayer

./: .gitignore  README.md
CCRender/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  iewController.h  iewController.mm  main.m
CCRender.xcodeproj/: project.pbxproj
CCRender.xcodeproj/project.xcworkspace/xcuserdata/haoyin.xcuserdatad/: UserInterfaceState.xcuserstate
CCRender.xcodeproj/project.xcworkspace/xcuserdata/haoyin.xcuserdatad/xcdebugger/: Expressions.xcexplist
CCRender.xcodeproj/xcshareddata/xcschemes/: CCRender.xcscheme
CCRender.xcodeproj/xcuserdata/haoyin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CCRender.xcodeproj/xcuserdata/haoyin.xcuserdatad/xcschemes/: xcschememanagement.plist
CCRender/Base.lproj/: main.storyboard
build_ffmpeg/: build.sh  compile-ios.sh  lipo_lib.sh
ccmedia/: CMakeLists.txt  container.h  format.hpp  main.cpp  player.hpp
ccmedia/al/: audio.hpp
ccmedia/ccmedia/encoder/: encoder.cpp  writer.cpp  writer.hpp
ccmedia/ccmedia/ios/: CCPlayer.mm
ccmedia/ccmedia/player/: format.cpp  format.hpp  player.cpp
ccmedia/ccmedia/render/: audio.hpp  render.hpp  video.cpp
ccmedia/ccmedia/util/: cc_util.hpp
ccmedia/core/: CMakeLists.txt
ccmedia/core/encoder/: encoder.cpp  encoder.hpp  writer.cpp  writer.hpp
ccmedia/core/player/: format.cpp  format.hpp  player.cpp  player.hpp
ccmedia/core/util/: cc_util.hpp  container.h  type.h
ccmedia/gles/: render.hpp  video.hpp
ccmedia/ios/: CCPlayer.h  CCPlayer.mm  CMakeLists.txt
ccmedia/player/: player.cpp
ccmedia/render/: CMakeLists.txt  render.cpp  render.hpp  render_util.hpp  video.hpp
ccmedia/shader/: VSH  shader_import.c  shader_import.h
ccmedia/util/: cc_util.hpp
ccplayer/: audio.cpp  audio.hpp  cc_util.hpp  container.h  format.cpp  player.cpp  player.hpp  render.hpp  video.cpp
ccplayer/gles/: render.cpp  video.cpp  video.hpp
ccplayer/ios/: CCRenderUIkit.h  CCRenderUIkit.mm
export/include/ccmedia/ccmedia/ios/: CCPlayer.h
export/include/ccmedia/ccmedia/util/: type.h
export/include/ccmedia/encoder/: encoder.hpp
export/include/ccmedia/player/: format.hpp  player.hpp
export/include/ccmedia/render/: video.hpp
export/include/ios/: CCPlayer.h
